# System-Monitor

./: .gitignore  CMakeLists.txt  README.md
include/: cpu_helper.h  format.h  linux_info_file_locations.h  linux_parser.h  memory_helper.h  ncurses_display.h  string_helper.h
include/helper/: cpu_helper.h  memory_helper.h  string_helper.h
include/model/: process.h  processor.h  system.h
include/parsing/: linux_parser.h
src/: cpu_helper.cpp  format.cpp  linux_parser.cpp  main.cpp  memory_helper.cpp  ncurses_display.cpp
src/helper/: cpu_helper.cpp  format_helper.cpp  memory_helper.cpp
src/model/: process.cpp  processor.cpp  system.cpp
src/parsing/: linux_parser.cpp
test/: utest_rp_cpu_helper.cpp  utest_rp_format.cpp  utest_rp_linux_parser.cpp  utest_rp_memory_calculator.cpp  utest_rp_memory_helper.cpp  utest_rp_process.cpp  utest_rp_string_helper.cpp
test/helper/: test_helpers.h
test/resources/: os-release  stat
test/resources/1015/: stat
test/resources/1017/: stat
test/resources/proc/: meminfo  uptime  version
test/resources/proc/1015/: stat  status
test/resources/proc/1016/: stat
test/resources/proc/1017/: stat
